--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-
+  
+<div class="logo-Psicologia">
+  <img src="logo.png" alt="Logo de Psicología UCSM" class="logo">
+</div>
+  
 <h1>Malla Curricular De La Carrera de Psicologia/UCSM</h1>
 <p id="creditosTotales" style="text-align:center; font-weight:bold; font-size: 1.1em;"></p>
 <div style="text-align:center; margin-bottom: 20px;">
