--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Malla Curricular con Prerrequisitos</title>
+  <title>Malla Curricular De La Carrera de Psicologia</title>
   <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
