--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
   <meta charset="UTF-8">
   <title>Malla Curricular De La Carrera de Psicologia</title>
   <link rel="stylesheet" href="estilos.css">
+  <link rel="icon" href="logo.png" type="image/png">
 </head>
 <body>
-  
-<div class="logo-Psicologia">
-  <img src="logo.png" alt="Logo de Psicología UCSM" class="logo">
-</div>
   
 <h1>Malla Curricular De La Carrera de Psicologia/UCSM</h1>
 <p id="creditosTotales" style="text-align:center; font-weight:bold; font-size: 1.1em;"></p>
